# baxter_cartesian_controller

./: CMakeLists.txt  README.md  package.xml
include/baxter_cartesian_controller/: eigen_pinv.hpp  mocap_servoing_controller.hpp
launch/: pose_arm_controllers.launch
src/: baxter_left_arm_controller.cpp  baxter_left_arm_controller_no_mocap.cpp  baxter_right_arm_controller.cpp  baxter_right_arm_controller_no_mocap.cpp
src/baxter_cartesian_controller/: mocap_servoing_controller.cpp
