<?xml version="1.0"?>
<package>
  <name>baxter_cartesian_controller</name>
  <version>0.0.0</version>
  <description>The baxter_cartesian_controller package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
